privacy policy weird bug on phone

--- a/BUMPiT.html
+++ b/BUMPiT.html
@@ -186,7 +186,7 @@
 
     <p style="color: orange; font-size: 25px; font-weight: bold;">CONTACT</p>
     <a href="mailto: kochigamerz@gmail.com" style="margin-bottom: 10px; font-family: 'Segoe UI'; color:burlywood;">kochigamerz@gmail.com</a>
-    <a href="https://drive.google.com/file/d/1mwqt_ncVP1Xs5HieNWQh4TeE1Rbng7xX/view?usp=sharing" target="_blank" style="margin-bottom: 120px; font-family: 'Segoe UI'; color:burlywood;">Privacy Policy</a>
+    <a href="https://drive.google.com/file/d/1mwqt_ncVP1Xs5HieNWQh4TeE1Rbng7xX/view?usp=sharing" target="_blank" style="margin: 0px auto 120px auto; font-family: 'Segoe UI'; color:burlywood; width: auto;">Privacy Policy</a>
 
 
 
