changed store links to not navigate

--- a/BUMPiT.html
+++ b/BUMPiT.html
@@ -41,13 +41,13 @@
       <span class="gamedetails"> <span style="color: orange;">Made by:</span> <span>KochiGamerZ</span></span>
       <span class="gamedetails"> <span style="color: orange;">Genre:</span> <span>Arcade</span> </span>
       <span class="gamedetails" style="flex-direction: row-reverse;">- Endless survival</span>
-      <a title="Play Store" href="http://www.google.com" target="_blank" style="text-decoration: none;">
+      <a title="Play Store" href="#" target="_blank" style="text-decoration: none;">
         <div class = "storelinks">
           <img title="Android"src="images/google-play.png" /> 
           <p>Coming Soon</p>
         </div>
       </a>
-      <a title="App Store" href="http://www.youtube.com" target="_blank" style="text-decoration: none;"> 
+      <a title="App Store" href="#" target="_blank" style="text-decoration: none;"> 
         <div class = "storelinks">
           <img title="iOS" src="images/apple-white.png" />
           <p>Coming Soon</p>
@@ -170,13 +170,13 @@
     <p id="maintit">BUMPiT</p>
 
     <div class="storescard">
-    <a title="Play Store" href="http://www.google.com" target="_blank" style="text-decoration: none;">
+    <a title="Play Store" href="#" target="_blank" style="text-decoration: none;">
       <div class = "storelinks">
         <img title="Android"src="images/google-play.png" /> 
         <p>Coming Soon</p>
       </div>
     </a>
-    <a title="App Store" href="http://www.youtube.com" target="_blank" style="text-decoration: none;"> 
+    <a title="App Store" href="#" target="_blank" style="text-decoration: none;"> 
       <div class = "storelinks">
         <img title="iOS" src="images/apple-white.png" />
         <p>Coming Soon</p>
