--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <p><a href="BUMPiT.html" style="color: black; font-size: smaller; margin: 2px;">More...</a></p> 
     </div>
     <div class="gamestores">
-      <a title="Android" class="androidicon" href="http://www.google.com" target="_blank"> </a> 
-      <a title="iOS" class="iosicon" href="http://www.youtube.com" target="_blank"></a>
+      <a title="Android" class="androidicon" href="BUMPiT.html" target="_blank"> </a> 
+      <a title="iOS" class="iosicon" href="BUMPiT.html" target="_blank"></a>
     </div>
     
   </div>
