SpeedTunnel and ViscousBox

--- a/BUMPiT.html
+++ b/BUMPiT.html
@@ -107,13 +107,13 @@
       <div class="gameobs" style="border-bottom-color: yellow;">
         <img title="Speed-Zone" src="images/GameObjs/speed1.png" />
         <div class="gametext" style="margin: 10px;">
-          <p style="color: yellow; font-weight: bolder; font-size: 20px; margin: 0px 0px 5px 0px; text-decoration: none;">Speed-Zone</p>
+          <p style="color: yellow; font-weight: bolder; font-size: 20px; margin: 0px 0px 5px 0px; text-decoration: none;">Speed-Tunnek</p>
           <p style="font-size: 15px; margin: 2px;">Enter this zone and get shot out at great speeds</p>
         </div>
       </div>
       <div class="gameobs" style="border-bottom-color:dodgerblue;">
         <div class="gametext" style="margin: 10px;">
-          <p style="color: dodgerblue; font-weight: bolder; font-size: 20px; margin: 0px 0px 5px 0px; text-decoration: none;">Viscous Zone</p>
+          <p style="color: dodgerblue; font-weight: bolder; font-size: 20px; margin: 0px 0px 5px 0px; text-decoration: none;">Viscous Box</p>
           <p style="font-size: 15px; margin: 2px;">The ball will face great resistance when passing through this highly viscous space</p>
         </div>
         <img title="Viscous-Zone" src="images/GameObjs/Slow2.png" />
