Tunnek to Tunnel

--- a/BUMPiT.html
+++ b/BUMPiT.html
@@ -107,7 +107,7 @@
       <div class="gameobs" style="border-bottom-color: yellow;">
         <img title="Speed-Zone" src="images/GameObjs/speed1.png" />
         <div class="gametext" style="margin: 10px;">
-          <p style="color: yellow; font-weight: bolder; font-size: 20px; margin: 0px 0px 5px 0px; text-decoration: none;">Speed-Tunnek</p>
+          <p style="color: yellow; font-weight: bolder; font-size: 20px; margin: 0px 0px 5px 0px; text-decoration: none;">Speed-Tunnel</p>
           <p style="font-size: 15px; margin: 2px;">Enter this zone and get shot out at great speeds</p>
         </div>
       </div>
