--- a/BUMPiT.html
+++ b/BUMPiT.html
@@ -41,10 +41,10 @@
       <span class="gamedetails"> <span style="color: orange;">Made by:</span> <span>KochiGamerZ</span></span>
       <span class="gamedetails"> <span style="color: orange;">Genre:</span> <span>Arcade</span> </span>
       <span class="gamedetails" style="flex-direction: row-reverse;">- Endless survival</span>
-      <a title="Play Store" href="#" target="_blank" style="text-decoration: none;">
+      <a title="Play Store" href="https://play.google.com/store/apps/details?id=com.KochiGamerz.BUMPiT" target="_blank" style="text-decoration: none;">
         <div class = "storelinks">
           <img title="Android"src="images/google-play.png" /> 
-          <p>Coming Soon</p>
+          <p>DOWNLOAD NOW</p>
         </div>
       </a>
       <a title="App Store" href="#" target="_blank" style="text-decoration: none;"> 
@@ -170,10 +170,10 @@
     <p id="maintit">BUMPiT</p>
 
     <div class="storescard">
-    <a title="Play Store" href="#" target="_blank" style="text-decoration: none;">
+    <a title="Play Store" href="https://play.google.com/store/apps/details?id=com.KochiGamerz.BUMPiT" target="_blank" style="text-decoration: none;">
       <div class = "storelinks">
         <img title="Android"src="images/google-play.png" /> 
-        <p>Coming Soon</p>
+        <p>DOWNLOAD NOW</p>
       </div>
     </a>
     <a title="App Store" href="#" target="_blank" style="text-decoration: none;"> 
