--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <p><a href="BUMPiT.html" style="color: black; font-size: smaller; margin: 2px;">More...</a></p> 
     </div>
     <div class="gamestores">
-      <a title="Android" class="androidicon" href="BUMPiT.html" target="_blank"> </a> 
+      <a title="Android" class="androidicon" href="https://play.google.com/store/apps/details?id=com.KochiGamerz.BUMPiT" target="_blank"> </a> 
       <a title="iOS" class="iosicon" href="BUMPiT.html" target="_blank"></a>
     </div>
     
@@ -36,7 +36,7 @@
 
   <div class = "txtcard">
     <p style="color: burlywood; font-size: 25px; font-weight: bold;">NEWS</p>
-    <p>BUMPiT is currently released for Closed Testing on the Google Play Store!</p>
+    <p>BUMPiT is now available on the Google Play Store!</p>
   </div>
 
   <div class = "txtcard">
